tests/fixtures/invalid/none_le_set.py
# Cannot compare with <= None and Set[int]
x: bool = None <= {1, 2, 3}
